# gigabyte-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: frontend.html  server.py
data/raw/: am6h_spec.html  variants.json
eval/: questions.jsonl  run_eval.py
eval/results/: uesd_vram.json
eval/results/llama/: benchmark.md
eval/results/qwen/: benchmark.md
scripts/: build_index.py  docker-entrypoint.sh  download_model.py  scrape.py  vram_report.py
src/rag/: __init__.py  chunk.py  config.py  embed.py  index.py  llm.py  pipeline.py  prompt.py  retrieve.py  scrape.py  variants.py  vram.py
