[project]
name = "gigabyte-rag"
version = "0.1.0"
description = "Pure-Python RAG assistant for the GIGABYTE AORUS MASTER 16 AM6H spec sheet (llama.cpp + Qwen3-1.7B GGUF)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.26",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "huggingface-hub>=0.24",
    "llama-cpp-python>=0.3.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]

# A single prebuilt llama.cpp CUDA (cu124) wheel powers BOTH the LLM (on GPU 0)
# and the embedding model (on CPU). No torch / transformers => small image, no
# CUDA-torch downloads, no version-matrix fragility.
[[tool.uv.index]]
name = "llama-cpp-cu124"
url = "https://abetlen.github.io/llama-cpp-python/whl/cu124"
explicit = true

[tool.uv.sources]
llama-cpp-python = { index = "llama-cpp-cu124" }
